--- a/index.html
+++ b/index.html
@@ -268,11 +268,6 @@
                         <!-- Figure Caption -->
                         <figcaption>
                           <ul class="list-unstyled g-absolute-centered opacity-0 g-opacity-1--parent-hover mb-0 g-transition-0_3">
-                            <li class="g-mb-5">
-                              <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="#!">
-                                <i class="fa fa-twitter"></i>
-                              </a>
-                            </li>
                             <li class="mb-0">
                               <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="https://www.linkedin.com/in/franco-berdun-b6a9315a/">
                                 <i class="fa fa-linkedin"></i>
@@ -309,7 +304,7 @@
                     <figcaption>
                       <ul class="list-unstyled g-absolute-centered opacity-0 g-opacity-1--parent-hover mb-0 g-transition-0_3">
                         <li class="g-mb-5">
-                          <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="#!">
+                          <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="https://twitter.com/OvejaSmith">
                             <i class="fa fa-twitter"></i>
                           </a>
                         </li>
@@ -328,7 +323,7 @@
                   <!-- <em class="d-block text-uppercase g-font-style-normal g-font-size-13 g-color-white g-color-gray-dark-v5--parent-hover g-mb-15">CTO</em> -->
                   <h4 class="h5 text-uppercase g-font-weight-700 g-color-white g-color-black--parent-hover g-mb-15">Matías
                     <br>
-                    O.Smith
+                    Oveja Smith
                   </h4>
                   <p class="g-font-size-default g-color-white g-color-gray-dark-v5--parent-hover mb-0">
                     Full Stack y DevOps
@@ -348,11 +343,6 @@
                       <!-- Figure Caption -->
                       <figcaption>
                         <ul class="list-unstyled g-absolute-centered opacity-0 g-opacity-1--parent-hover mb-0 g-transition-0_3">
-                          <li class="g-mb-5">
-                            <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="#!">
-                              <i class="fa fa-twitter"></i>
-                            </a>
-                          </li>
                           <li class="mb-0">
                             <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="https://www.linkedin.com/in/pablo-rivera-a3aa0b128/">
                               <i class="fa fa-linkedin"></i>
@@ -387,16 +377,6 @@
                       <!-- Figure Caption -->
                       <figcaption>
                         <ul class="list-unstyled g-absolute-centered opacity-0 g-opacity-1--parent-hover mb-0 g-transition-0_3">
-                          <li class="g-mb-5">
-                            <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="#!">
-                              <i class="fa fa-twitter"></i>
-                            </a>
-                          </li>
-                          <li class="mb-0">
-                            <a class="u-icon-v3 u-icon-size--sm g-color-gray-dark-v5 g-color-white--hover g-bg-white g-bg-primary--hover" href="">
-                              <i class="fa fa-linkedin"></i>
-                            </a>
-                          </li>
                         </ul>
                       </figcaption>
                       <!-- Figure Caption -->
