--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                     <a href="https://blockchain.tandil.dev" class="nav-link p-0">Blockchain</a>
                   </li>
                   <li class="nav-item g-ml-15--lg">
+                    <a href="https://centinela.tandil.dev" class="nav-link p-0">Centinela</a>
+                  </li>
+                  <li class="nav-item g-ml-15--lg">
                     <a href="#contact" class="nav-link p-0">Contacto</a>
                   </li>
                 </ul>
