boton centinela agregado (#16)
* boton centinela agregado

* fix spacing appBar

Co-authored-by: ezequiel <ezequiel.avalos@gmail.com>

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
                     <a href="https://blockchain.tandil.dev" class="nav-link p-0">Blockchain</a>
                   </li>
-                  <li class="nav-item g-ml-15--lg">
+                  <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
+                    <a href="https://centinela.tandil.dev" class="nav-link p-0">Centinela</a>
+                  </li>
+                  <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
                     <a href="#contact" class="nav-link p-0">Contacto</a>
                   </li>
                 </ul>
